--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Permanent+Marker&family=Playwrite+AU+SA:wght@100..400&display=swap');
 @import "tailwindcss";
 
 :root {
